--- a/PizzaPros/PizzaPros/wwwroot/css/site.css
+++ b/PizzaPros/PizzaPros/wwwroot/css/site.css
@@ -520,3 +520,8 @@ body {
         content: ''; /* empty string, no specials here */
         display: inline-block;
     }
+
+#inner-wrap {
+    width: 100vw; /* make it 100% of the viewport width (vw) */
+    margin-left: calc((100% - 100vw) / 2); /* then remove the gap to the left of the container with this equation */
+}
