--- a/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
                                     <a class="dropdown-item text-white" asp-page="/Admin/CrustFlavor/Index">Add Crust Flavors</a>
                                     <a class="dropdown-item text-white" asp-page="/Admin/CrustType/Index">Add Crust Types</a>
                                     <a class="dropdown-item text-white" asp-page="/Admin/PizzaSize/Index">Add Pizza Sizes</a>
-                                    <a class="dropdown-item text-white" asp-page="/Admin/PizzaType/Index">Add Pizzas</a>
+                                    <a class="dropdown-item text-white" asp-page="/Admin/MenuType/Index">Add New Menu Item</a>
                                     <a class="dropdown-item text-white" asp-page="/Admin/User/Index">Add Users</a>
                                 </div>
                             </li>
