--- a/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
@@ -75,7 +75,7 @@
                         else
                         {
                             <li>
-                                <a href="#" class="nav-link text-white-50">
+                                <a asp-page="/Customer/Cart/Index" class="nav-link text-white-50">
                                     <i class="fas fa-shopping-cart"></i> &nbsp; (0)
                                 </a>
                             </li>
