--- a/PizzaPros/PizzaPros/Areas/Identity/Pages/Account/Register.cshtml
+++ b/PizzaPros/PizzaPros/Areas/Identity/Pages/Account/Register.cshtml
@@ -83,29 +83,52 @@
                                 By clicking <em>Register</em> you agree to our <a href="" target="_blank"> terms of service </a>
                             </p>
                             <hr />
-                            <div class="row">
+                            
                                 @foreach (var provider in Model.ExternalLogins)
                                 {
-                                    <div class="col-6">
+                                <div class="col-12 d-flex justify-content-center ">
+                                    <ul class="text-left w-50" style="list-style-type:none;">
+
+
                                         @if (provider.Name.ToLower().Contains("facebook"))
                                         {
+                                            <li>
                                             <button type="submit" class="btn btn-block facebook-btn form-control" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-facebook-square"></i> Sign up with @provider.DisplayName</button>
+
+                                            </li>
                                         }
                                         else
                                         {
                                             @if (provider.Name.ToLower().Contains("micro"))
                                             {
+                                                <li>
+
                                                 <button type="submit" class="btn btn-block microsoft-btn form-control" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-windows"></i> Sign up with @provider.DisplayName</button>
+                                                </li>
                                             }
                                             else
                                             {
-                                                <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                                @if (provider.Name.ToLower().Contains("google"))
+                                                {
+                                                    <li>
+
+                                                    <button type="submit" class="btn btn-block google-btn form-control" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fa fa-google"></i> Sign up with @provider.DisplayName</button>
+                                                    </li>
+                                                }
+                                                else
+                                                {
+                                                    <li>
+
+                                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                                    </li>
+                                                }
                                             }
                                         }
-                                    </div>
+                                    </ul>
+                                </div>
 
                                 }
-                            </div>
+                         
                         </form>
                     }
 
