--- a/PizzaPros/PizzaPros/wwwroot/css/site.css
+++ b/PizzaPros/PizzaPros/wwwroot/css/site.css
@@ -420,10 +420,12 @@ body {
 
 .facebook-btn {
     background-color: #3C589C;
+    color: white;
 }
 
-    .facebook-btn:hover, .microsoft-btn:hover {
-        color: #000000;
+    .facebook-btn:hover, .microsoft-btn:hover, .google-btn:hover {
+        opacity: 0.85;
+        color: white;
     }
 
 #logreg-forms .microsoft-btn {
@@ -432,6 +434,11 @@ body {
 
 .microsoft-btn {
     background-color: #2672ec;
+    color: white;
+}
+.google-btn {
+    background-color: #dd4b39;
+    color: white;
 }
 
 #logreg-forms .form-reset, #logreg-forms .form-signup {
