++countTimer for Manage Order, Navbar fixed-top

--- a/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
@@ -20,10 +20,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.css" />
 
 </head>
-<body>
+<body cz-shortcut-listen="true" style="padding-top: 140px;">
     <header>
 
-        <nav class="navbar navbar-clip navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary box-shadow mb-3">
+        <nav class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary box-shadow mb-3">
             <div class="container">
                 <a asp-area="" asp-page="/Index" class="navbar-brand">
                     <img src="~/images/PizzaProLogo2.png" alt="CoolBrand">
