Fixed Issue #11 in project

--- a/PizzaPros/PizzaPros/Pages/Admin/Order/OrderList.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/Order/OrderList.cshtml
@@ -72,7 +72,13 @@ else
     </header>
 }
 
+<style>
 
+    tr td:nth-child(2){
+        text-transform: capitalize;
+    }
+
+</style>
 
 @section Scripts{
     <script src="~/js/orderList.js"></script>
