updated OrderDetails and Stripe checkout UI #14 and #15

--- a/PizzaPros/PizzaPros/Pages/Customer/Cart/Summary.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Customer/Cart/Summary.cshtml
@@ -120,13 +120,13 @@
                                     class="stripe-button" 
                                     data-key="@Stripe.Value.PublishableKey"
                                     data-amount="@OrderTotalForStripe"
-                                    data-name="SnackPro Restaurant"
+                                    data-name="PizzaPros Restaurant"
                                     data-label="Place Order"
-                                    data-description="Easy Snacks On The Go!"
+                                    data-description="Pizza to Go!"
                                     data-locale="auto"
                                     data-zip-code="true"
                                     data-allow-remember-me="false"
-                                    data-image="https://stripe.com/img/documentation/checkout/marketplace.png">
+                                    data-image="/images/PizzaProLogo2.png">
                                 
                             </script>
                             <script>document.getElementsByClassName("stripe-button-el")[0].style.display = 'none';</script>
