--- a/PizzaPros/PizzaPros/Pages/Admin/Order/OrderDetails.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/Order/OrderDetails.cshtml
@@ -4,7 +4,6 @@
 
 
 
-
 <form method="post">
     <div class="border ml-1 backgroundWhite mt-4">
         <div class="row pb-1">
@@ -26,7 +25,7 @@
                         <label>Name</label>
                     </div>
                     <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailsVM.OrderHeader.PickupName" disabled class="form-control" />
+                        <input asp-for="OrderDetailsVM.OrderHeader.PickupName" disabled class="form-control text-capitalize" />
                     </div>
                 </div>
                 <div class="form-group row">
@@ -39,10 +38,10 @@
                 </div>
                 <div class="form-group row">
                     <div class="col-md-3 col-12 text-primary">
-                        <label><label asp-for="OrderDetailsVM.OrderHeader.ApplicationUser.PhoneNumber"></label></label>
+                        <label><label>Phone Number</label></label>
                     </div>
                     <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailsVM.OrderHeader.ApplicationUser.PhoneNumber" disabled class="form-control" />
+                        <input id="ContactPhone" asp-for="OrderDetailsVM.OrderHeader.ApplicationUser.PhoneNumber" disabled class="form-control" />
                     </div>
                 </div>
                 <div class="form-group row">
@@ -50,7 +49,7 @@
                         <label><label asp-for="OrderDetailsVM.OrderHeader.OrderTotal"></label></label>
                     </div>
                     <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailsVM.OrderHeader.OrderTotal" disabled class="form-control" />
+                        <input asp-for="OrderDetailsVM.OrderHeader.OrderTotal" asp-format="{0:C}" disabled class="form-control" />
                     </div>
                 </div>
                 <div class="form-group row">
@@ -61,14 +60,19 @@
                         <input value="@Model.OrderDetailsVM.OrderHeader.PickUpTime.ToShortDateString() @Model.OrderDetailsVM.OrderHeader.PickUpTime.ToShortTimeString()" disabled class="form-control" />
                     </div>
                 </div>
-                <div class="form-group row">
-                    <div class="col-md-3 col-12 text-primary">
-                        <label><label asp-for="OrderDetailsVM.OrderHeader.Comments"></label></label>
+
+                @if (Model.OrderDetailsVM.OrderHeader.Comments != null)
+                {
+                    <div class="form-group row">
+                        <div class="col-md-3 col-12 text-primary">
+                            <label><label asp-for="OrderDetailsVM.OrderHeader.Comments"></label></label>
+                        </div>
+                        <div class="col-md-9 col-12">
+                            <input asp-for="OrderDetailsVM.OrderHeader.Comments" disabled class="form-control" />
+                        </div>
                     </div>
-                    <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailsVM.OrderHeader.Comments" disabled class="form-control" />
-                    </div>
-                </div>
+                }
+
 
             </div>
 
@@ -85,7 +89,7 @@
                     {
                         <li class="list-group-item d-flex justify-content-between">
                             <div>
-                                <h6 class="my-0">@details.Name</h6>
+                                <h6 class="my-0 text-capitalize">@details.Name</h6>
                                 <small class="text-muted">Quantity : @details.Count</small>
                             </div>
                             <span class="text-muted">$@(details.Price * details.Count)</span>
@@ -108,10 +112,10 @@
                     <button type="submit" disabled class="btn btn-info form-control">@Model.OrderDetailsVM.OrderHeader.Status </button>
                 }
 
-                @if ((User.IsInRole(SD.ManagerRole) || User.IsInRole(SD.FrontDeskRole)) 
-                    && (Model.OrderDetailsVM.OrderHeader.Status.Equals(SD.StatusSubmitted) 
-                    || Model.OrderDetailsVM.OrderHeader.Status.Equals(SD.StatusReady) 
-                    || Model.OrderDetailsVM.OrderHeader.Status.Equals(SD.StatusInProcess)))
+                @if ((User.IsInRole(SD.ManagerRole) || User.IsInRole(SD.FrontDeskRole))
+                && (Model.OrderDetailsVM.OrderHeader.Status.Equals(SD.StatusSubmitted)
+                || Model.OrderDetailsVM.OrderHeader.Status.Equals(SD.StatusReady)
+                || Model.OrderDetailsVM.OrderHeader.Status.Equals(SD.StatusInProcess)))
                 {
                     <div class="row pt-3">
                         <div class="col-6">
@@ -130,3 +134,14 @@
         </div>
     </div>
 </form>
+
+@section Scripts {
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
+    <script>
+        $(function () {
+
+            $("#ContactPhone").mask("(999) 999-9999");
+        });
+
+    </script>
+}
